# sonora

./: .gitignore  Pipfile  README.md  kivy_min_examples.py  pyproject.toml  regen_exe.sh  run.py  run_server.py  scratch.py  scratch_client.py  sonora.spec
bugs/: README.md  finishing_off_an_animal.txt
sonora/: app.py  board_objects.py  buttons.py  kivy_min_examples.py  models.py  poller.py  popups.py  server.py  static.py  views.py
sonora/buttons_dir/: popup_btns.py  updater.py
sonora/data/: __init__.py  camera.icns
tests/data/: jack_1.json  jack_near_lose.json
tests/tools/: upload_game_state.py
